# corndogs

./: .bumpversion.cfg  .dockerignore  .gitignore  .releaserc.json  README.md  convert-to-csil-reactorcide.md
.github/scripts/: install_and_buf_generate.sh  make_general_release.sh  make_helm_release.sh
.github/workflows/: corndogs_release.yaml  helm_release.yaml  old_release.yaml  pr_helm_validation.yaml  pr_protos.yaml  protos_release.yaml  pull_request.yaml  release.yaml  upload_chart.yaml
.reactorcide/jobs/: build-test-env.yaml  client-tests.yaml  conventional-commits.yaml  csil-gen-check.yaml  helm-validate.yaml  release-helm.yaml  release-server.yaml  test-server.yaml
clients/: README.md  install-transport-toolchains.sh  run-tests.sh
clients/c/: client.gen.h  codec.gen.h  genquickstart.md  server.gen.h  types.gen.h
clients/corndogs/: client.gen.go  codec.gen.go  genquickstart.md  go.mod  services.gen.go  transport_test.go  types.gen.go
clients/csharp/: Client.gen.cs  ClientAsync.gen.cs  Codec.gen.cs  Services.gen.cs  Types.gen.cs  corndogs.csproj  genquickstart.md
clients/dart/: genquickstart.md  pubspec.yaml
clients/elixir/: genquickstart.md  mix.exs
clients/go/: go.mod  (+1 more)
corndogs/: APIDOCS.md  Dockerfile  RemoveMe.txt  go.mod  go.sum  main.go  package.json  skaffold.yaml
csil/: corndogs.csil  generate.sh
docs/: README.md  deployment.md  storage-backends.md
helm_chart/: CHANGELOG.md  README.md
protos/: buf.gen.yaml  pyproject.toml
protos/.github/workflows/: pull_request.yaml  push-to-bsr.yaml  release.yaml
protos/corndogsapis/: buf.yaml
(+114 files in other folders)
