
[project]
name = "corndogs-cicd-testing"
version = "0.1.0"
description = "Corndogs python gRPC client"
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/JacobPuff/corndogs-cicd-testing"
Issues = "https://github.com/JacobPuff/corndogs-cicd-testing/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gen/proto/python/corndogs"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"